--- a/css/phone.css
+++ b/css/phone.css
@@ -8,9 +8,21 @@ body > div {
 }
 
 body > div:first-of-type > nav {
-    background-color: #eee;
-    padding: 1em 0em;
+    background-color: #000;
+    padding:  0em;
     flex-flow: column nowrap;
+    width: 2em;
+    height: 2em;
+    border-radius: 5px;
+    overflow-y: hidden;
+    position: fixed;
+    bottom: 5px;
+    right: 5px;
+    transition: all 3s;
+}
+
+nav a {
+    display: none;
 }
 
 nav a:nth-of-type(3) {
