--- a/css/phone.css
+++ b/css/phone.css
@@ -2,12 +2,12 @@ body {
     margin: 0;
 }
 
-body > div {
+main > div {
     padding: 0em 0.5em 0.5em 0.5em;
     height: auto;
 }
 
-body > div:first-of-type > nav {
+main > div:first-of-type > nav {
     background-color: #000;
     padding:  0em;
     flex-flow: column nowrap;
@@ -16,9 +16,23 @@ body > div:first-of-type > nav {
     border-radius: 5px;
     overflow-y: hidden;
     position: fixed;
-    bottom: 5px;
-    right: 5px;
+    bottom: 20px;
+    right: 20px;
     transition: all 3s;
+    z-index: 1;
+}
+
+main > div:first-of-type > nav:before {
+    content: "";
+    color: green;
+    position: absolute;
+    top: -8px;
+    left: -8px;
+    border-width: 15px;
+    border-color: #f6454e;
+    border-style: solid;
+    border-radius: 100%;
+    z-index: 1;
 }
 
 nav a {
@@ -33,54 +47,56 @@ nav a:nth-of-type(3) {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-body > div:nth-of-type(1) > div {
+main > div:nth-of-type(1) > div {
     flex-flow: column nowrap;
     padding: 0.5em;
 }
 
-body > div:nth-of-type(1) > div > div:first-of-type p {
+main > div:nth-of-type(1) > div > div:first-of-type p {
     width: 100%;
 }
 
-body > div:nth-of-type(1) > div > div:first-of-type, body > div:nth-of-type(1) > div > div:last-of-type {
+main > div:nth-of-type(1) > div > div:first-of-type, main > div:nth-of-type(1) > div > div:last-of-type {
     padding: 0.5em;
     width: 100%;
 }
 
-body > div:nth-of-type(2) > div {
+main > div:nth-of-type(2) > div {
     flex-flow: column nowrap;
     padding: 0.5em;
 }
 
-body > div:nth-of-type(2) > div > div {
+main > div:nth-of-type(2) > div > div {
     padding: 0.5em;
 }
 
-body > div:nth-of-type(3) > div {
+main > div:nth-of-type(3) > div {
     overflow: scroll;
     padding: 2rem 0em;
     justify-content: space-between;
+    scroll-snap-type: x mandatory;
 }
 
-body > div:nth-of-type(3) > div > div {
+main > div:nth-of-type(3) > div > div {
     margin: 0em 0.8em;
+    scroll-snap-align: center;
 }
 
-body> div:nth-of-type(4) > div {
+main> div:nth-of-type(4) > div {
     flex-flow: column-reverse;
     padding: 2rem 0.5em;
 }
 
-body > div:nth-of-type(4) > div:nth-of-type(2) {
+main > div:nth-of-type(4) > div:nth-of-type(2) {
     flex-flow: column;
 }
 
-body > div:nth-of-type(4) > div > div {
+main > div:nth-of-type(4) > div > div {
     width: 100%;
     padding: 0.5em;
 }
 
-body > div:nth-of-type(2) h1, body > div:nth-of-type(3) h1, body > div:nth-of-type(4) h1, body > div:nth-of-type(5) h1{
+main > div:nth-of-type(2) h1, main > div:nth-of-type(3) h1, main > div:nth-of-type(4) h1, main > div:nth-of-type(5) h1{
     font-size: 2.5rem;
     margin: 0rem auto 3rem auto;
     padding-top: 1em;
