--- a/css/web-design.css
+++ b/css/web-design.css
@@ -24,6 +24,15 @@ img {
     width: 100%;
 }
 
+main {
+    overflow-y: scroll;
+    height: 100vh;
+    width: 100%;
+    position: sticky;
+    top: 0;
+    scroll-snap-type: y mandatory;
+}
+
 h1 {
     text-shadow: 0px 5px 5px rgba(0, 0, 0, 0.089);
 }
@@ -35,30 +44,38 @@ nav {
     padding: 4rem 2rem;
 }
 
-body > div {
+main > div {
     background: #eee;
     padding: 1rem;
     width: 100%;
     height: 100vh;
+    scroll-snap-align: start;
 }
 
-body > div:nth-of-type(2) {
+main > div:nth-of-type(1) {
+    scroll-snap-align: start;
+}
+
+main > div:nth-of-type(2) {
     background-color: #fff;
+    scroll-snap-align: start;
 }
 
-body > div:nth-of-type(3) {
+main > div:nth-of-type(3) {
     background-color: #f7f5f7;
+    scroll-snap-align: start;
 }
 
-body > div:nth-of-type(4) {
+main > div:nth-of-type(4) {
     background-color:#fff;
     min-height: 100vh;
     height: auto;
 }
 
-body > div:nth-of-type(5) {
+main > div:nth-of-type(5) {
     background-color: #f6454f;
-    height: 70vh;
+    height: 100vh;
+    scroll-snap-align: start;
 }
 
 nav a {
@@ -82,42 +99,42 @@ nav a:nth-of-type(3) {
     font-family: "Roboto Mono", monospace;
 }
 
-body > div > div {
+main > div > div {
     display: flex;
     flex-flow: row nowrap;
     padding: 1rem;
 }
 
-body > div:nth-of-type(1) > div > div:first-of-type {
+main > div:nth-of-type(1) > div > div:first-of-type {
     padding: 2rem;
     width: 60%;
 }
 
-body > div:nth-of-type(1) > div > div:last-of-type {
+main > div:nth-of-type(1) > div > div:last-of-type {
     width: 40%;
 }
 
-body > div:nth-of-type(1) > div > div:first-of-type a {
+main > div:nth-of-type(1) > div > div:first-of-type a {
     margin: 1em 0;
     display: inline-block;
     text-decoration: none;
 }
 
-body > div:nth-of-type(1) > div > div:first-of-type h1 {
+main > div:nth-of-type(1) > div > div:first-of-type h1 {
     font-size: 2.5rem
 }
 
-body > div:nth-of-type(1) > div > div:first-of-type p {
+main > div:nth-of-type(1) > div > div:first-of-type p {
     width: 70%;
 }
 
-body > div:nth-of-type(2) h1, body > div:nth-of-type(3) h1, body > div:nth-of-type(4) h1, body > div:nth-of-type(5) h1{
+main > div:nth-of-type(2) h1, main > div:nth-of-type(3) h1, main > div:nth-of-type(4) h1, main > div:nth-of-type(5) h1{
     font-size: 2.5rem;
     margin: 6rem auto 3rem auto;
     text-align: center;
 }
 
-body > div:nth-of-type(2) div > div {
+main > div:nth-of-type(2) div > div {
     padding: 2rem;
     display: flex;
     flex-flow: column nowrap;
@@ -125,11 +142,11 @@ body > div:nth-of-type(2) div > div {
     align-items: center;
 }
 
-body > div:nth-of-type(2) > div > div img {
+main > div:nth-of-type(2) > div > div img {
     width: 50%;
 }
 
-body > div:nth-of-type(3) > div {
+main > div:nth-of-type(3) > div {
     display: flex;
     flex-flow: row nowrap;
     padding: 2rem;
@@ -137,7 +154,7 @@ body > div:nth-of-type(3) > div {
     align-items: center;
 }
 
-body > div:nth-of-type(3) > div > div {
+main > div:nth-of-type(3) > div > div {
     background-color: #fff;
     margin: 0em 1em;
     min-height: 20em;
@@ -152,17 +169,17 @@ body > div:nth-of-type(3) > div > div {
 }
 
 
-body > div:nth-of-type(3) > div > div:hover {
+main > div:nth-of-type(3) > div > div:hover {
     background-color: #f6454f;
     color: #fff;
     transform: translate(0px, -40px);
 }
 
-body > div:nth-of-type(3) > div > div:hover > div > .im {
+main > div:nth-of-type(3) > div > div:hover > div > .im {
     color: #fff;
 }
 
-body > div:nth-of-type(3) > div > div > div:nth-of-type(1) {
+main > div:nth-of-type(3) > div > div > div:nth-of-type(1) {
     display: flex;
     width: 100%;
     flex: 1;
@@ -172,12 +189,12 @@ body > div:nth-of-type(3) > div > div > div:nth-of-type(1) {
 }
 
 
-body > div:nth-of-type(3) > div > div > div:first-of-type a {
+main > div:nth-of-type(3) > div > div > div:first-of-type a {
     text-decoration: none;
     color:#f6454f;
 }
 
-body > div:nth-of-type(3) > div > div > div:last-of-type {
+main > div:nth-of-type(3) > div > div > div:last-of-type {
     text-align: center;
     padding: 2rem;
 }
@@ -186,7 +203,7 @@ body > div:nth-of-type(3) > div > div > div:last-of-type {
     font-size: 8rem;
 }
 
-body > div:nth-of-type(4) > div {
+main > div:nth-of-type(4) > div {
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-around;
@@ -194,17 +211,17 @@ body > div:nth-of-type(4) > div {
     padding: 2rem 5rem;
 }
 
-body > div:nth-of-type(4) > div > div > h2 {
+main > div:nth-of-type(4) > div > div > h2 {
     margin: 0 0 0.5em 0;
     text-align: left;
 }
 
-body > div:nth-of-type(4) > div > div {
+main > div:nth-of-type(4) > div > div {
     padding: 1rem 4rem;
     width: 50%;
 }
 
-body > div:nth-of-type(4) > div img {
+main > div:nth-of-type(4) > div img {
     width: 30%;
     height: auto;
 }
