--- a/floIntern/css/main.css
+++ b/floIntern/css/main.css
@@ -1,74 +1,397 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+}
+
+:root {
+  font-size: clamp(1rem, 1.2vmax, 3rem);
+}
+
+html, body {
+  height: 100%;
+  scroll-behavior: smooth;
+}
+
 body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin: 0;
-    padding: 0;
-    word-break: break-all;
+  color: rgba(var(--text-color), 1);
+  background: rgba(var(--background-color), 1);
+}
+body,
+body * {
+  --accent-color: #0D7377;
+  --text-color: 17, 17, 17;
+  --background-color: 255, 255, 255;
+  --danger-color: red;
 }
 
-* { box-sizing: border-box; }
-
-nav {
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1em;
-    background-color: #f8f8f8;
+body[data-theme=dark],
+body[data-theme=dark] * {
+  --accent-color: #32E0C4;
+  --text-color: 240, 240, 240;
+  --text-color-light: 170, 170, 170;
+  --background-color: 10, 10, 10;
+  --danger-color: rgb(255, 106, 106);
 }
 
-
-input {
-    padding: 0.5em;
-    border: 2px solid #ddd;
-    background-color: #f8f8f8;
-    border-radius: 5px;
-    width: 100%;
+p {
+  font-size: 0.8;
+  max-width: 65ch;
+  line-height: 1.7;
+  margin-bottom: 1.5rem;
+  color: rgba(var(--text-color), 0.8);
+}
+p:not(:last-of-type) {
+  margin-bottom: 1rem;
 }
 
-.heading {
-    font-weight: bold;
+img {
+  object-fit: cover;
 }
 
-.container {
-    padding: 1em;
+a {
+  color: inherit;
+  text-decoration: none;
+}
+a:focus-visible {
+  box-shadow: 0 0 0 0.1rem rgba(var(--text-color), 1) inset;
+}
+
+button {
+  display: inline-flex;
+  border: none;
+  background-color: inherit;
+}
+
+a:any-link:focus-visible {
+  outline: rgba(var(--text-color), 1) 0.1rem solid;
+}
+
+sm-button {
+  --border-radius: 0.3rem;
+}
+
+ul {
+  list-style: none;
+}
+
+.flex {
+  display: flex;
+}
+
+.grid {
+  display: grid;
+}
+
+.hide {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.hide-completely {
+  display: none !important;
+}
+
+.no-transformations {
+  transform: none !important;
+}
+
+.overflow-ellipsis {
+  width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.breakable {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  -ms-word-break: break-all;
+  word-break: break-word;
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+}
+
+.full-bleed {
+  grid-column: 1/4;
+}
+
+.h1 {
+  font-size: 2.5rem;
+}
+
+.h2 {
+  font-size: 2rem;
+}
+
+.h3 {
+  font-size: 1.4rem;
+}
+
+.h4 {
+  font-size: 1rem;
+}
+
+.h5 {
+  font-size: 0.8rem;
+}
+
+.uppercase {
+  text-transform: uppercase;
+}
+
+.capitalize {
+  text-transform: capitalize;
+}
+
+.flex {
+  display: flex;
+}
+
+.grid {
+  display: grid;
+}
+
+.grid-3 {
+  grid-template-columns: 1fr auto auto;
+}
+
+.flow-column {
+  grid-auto-flow: column;
+}
+
+.gap-0-5 {
+  gap: 0.5rem;
+}
+
+.gap-1 {
+  gap: 1rem;
+}
+
+.gap-1-5 {
+  gap: 1.5rem;
+}
+
+.gap-2 {
+  gap: 2rem;
+}
+
+.gap-3 {
+  gap: 3rem;
+}
+
+.text-align-right {
+  text-align: right;
+}
+
+.align-start {
+  align-items: flex-start;
+}
+
+.align-center {
+  align-items: center;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.justify-start {
+  justify-content: start;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.justify-right {
+  margin-left: auto;
+}
+
+.align-self-center {
+  align-self: center;
+}
+
+.justify-self-center {
+  justify-self: center;
+}
+
+.justify-self-start {
+  justify-self: start;
+}
+
+.justify-self-end {
+  justify-self: end;
+}
+
+.direction-column {
+  flex-direction: column;
+}
+
+.space-between {
+  justify-content: space-between;
+}
+
+.w-100 {
+  width: 100%;
+}
+
+.color-0-8 {
+  color: rgba(var(--text-color), 0.8);
+}
+
+.weight-400 {
+  font-weight: 400;
+}
+
+.weight-500 {
+  font-weight: 500;
+}
+
+.ripple {
+  position: absolute;
+  border-radius: 50%;
+  transform: scale(0);
+  background: rgba(var(--text-color), 0.16);
+  pointer-events: none;
+}
+
+.interact {
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.observe-empty-state:empty {
+  display: none;
+}
+
+.observe-empty-state:not(:empty) ~ .empty-state {
+  display: none;
+}
+
+.icon {
+  width: 1.5rem;
+  height: 1.5rem;
+  fill: rgba(var(--text-color), 0.9);
+}
+
+.button__icon {
+  height: 1.2rem;
+  width: 1.2rem;
+}
+.button__icon--left {
+  margin-right: 0.5rem;
+}
+.button__icon--right {
+  margin-left: 0.5rem;
+}
+
+#confirmation_popup,
+#prompt_popup {
+  flex-direction: column;
+}
+#confirmation_popup h4,
+#prompt_popup h4 {
+  font-weight: 500;
+  margin-bottom: 0.5rem;
+}
+#confirmation_popup sm-button,
+#prompt_popup sm-button {
+  margin: 0;
+}
+#confirmation_popup .flex,
+#prompt_popup .flex {
+  padding: 0;
+  margin-top: 1rem;
+}
+#confirmation_popup .flex sm-button:first-of-type,
+#prompt_popup .flex sm-button:first-of-type {
+  margin-right: 0.6rem;
+  margin-left: auto;
+}
+
+#main_header {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  position: sticky;
+  padding: 1rem 1.5rem;
+  background: rgba(var(--background-color), 1);
+  border-bottom: solid 1px rgba(var(--text-color), 0.16);
+  z-index: 2;
+}
+
+#logo {
+  display: grid;
+  align-items: center;
+  width: 100%;
+  grid-template-columns: auto 1fr;
+  gap: 0 0.5rem;
+  margin-right: 1rem;
+}
+#logo h4 {
+  text-transform: capitalize;
+  font-size: 1rem;
+  font-weight: 600;
+  margin-top: 0.2rem;
+}
+#logo h5 {
+  font-size: 0.8rem;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+}
+#logo #main_logo {
+  height: 1.4rem;
+  width: 1.4rem;
+  fill: rgba(var(--text-color), 1);
+  stroke: none;
+}
+
+sm-tab-header {
+  padding: 0 1.5rem;
+  background-color: rgba(var(--text-color), 0.06);
+}
+
+sm-tab {
+  padding: 0.5rem 0.8rem;
+}
+
+.section {
+  display: flex;
+  flex-direction: column;
+  margin-top: 3rem;
+  padding: 0 1.5rem;
+}
+.section:first-of-type {
+  margin-top: 0;
+}
+
+.section__header {
+  display: flex;
+  padding: 1rem 0;
+  justify-content: space-between;
 }
 
 .card {
-    padding: 1em;
-    background: #fff;
-    color: #000;
-    font-weight: 100;
-    width: 100%;
-    box-shadow: none;
-    border-radius: 5px;
-    margin: 0.5em 0em;
-    text-decoration: none;
-    display: block;
-    width: 100%;
+  padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  min-width: 20rem;
+  border-radius: 0.5rem;
+  margin-right: 1.5rem;
+  background-color: rgba(var(--text-color), 0.06);
+}
+.card h3 {
+  font-weight: 500;
 }
 
-.card:hover {
-    box-shadow: 0px 0px 4px 1px rgb(0 0 0 / 15%);
-    cursor: pointer;
-}
-
-.card:active {
-    background-color: #f8f8f8;
-}
-
-.card:focus {
-    background-color: #eee;
-}
-
-.card-heading {
-    font-weight: bold;
-    font-size: 20px;
-    color: #ff5454;
-}
-
-
-@media screen and (max-width: 400px) {
-    nav {
-        flex-flow: column nowrap;
-    }
+@media screen and (min-width: 640px) {
+  sm-popup {
+    --width: 24rem;
+  }
 }
