--- a/floIntern/css/main.css
+++ b/floIntern/css/main.css
@@ -507,22 +507,23 @@ sm-tab {
   min-width: 20rem;
   border-radius: 0.5rem;
   margin: 1rem 0.5em;
+  margin-bottom: 0.4em;
   flex: 1 0;
   cursor: pointer;
   position: relative;
   background-color: rgba(var(--text-color), 0.06);
 }
 
-.card > div:nth-of-type(3) {
+.card > a > div:nth-of-type(3) {
         position: absolute;
-        right: 1em;
-        top: 1em;
+        right: 0em;
+        top: 0em;
         padding: 0.5em;
         border-radius: 1rem;
         background-color: rgba(var(--background-color));
 }
 
-.card h3 {
+.card > a > h3 {
   font-weight: 500;
 }
 
